<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".fragments.ListFragment"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:visibility="visible">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/actv_selection_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:completionThreshold="1"
                    android:hint="@string/autocompletetextview"
                    android:lines="1"
                    android:maxLines="1"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/ib_add_item"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <ImageButton
                    android:id="@+id/ib_add_item"
                    android:layout_width="@dimen/width_button_add"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:background="@color/design_default_color_primary"
                    android:src="@drawable/ic_add_item"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--There was a nested scroll view here-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_unclassified_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_departments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/act_departmentName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:completionThreshold="1"
                    android:hint="New department name"
                    android:lines="1"
                    android:maxLines="1"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ib_add_department"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/ib_add_department"
                    android:layout_width="@dimen/width_button_add"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:background="@color/design_default_color_primary"
                    android:src="@drawable/ic_add_item"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>


            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

    </LinearLayout>


</layout>