<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/ll_complet_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:id="@+id/iv_dd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/drag_drop_cd"
            app:srcCompat="@drawable/ic_drag_drop" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_marginStart="8dp"

            android:layout_weight="100"
            tools:text="TEST" />

        <LinearLayout
            android:id="@+id/ll_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="gone">

            <TextView
                android:id="@+id/tv_unit"
                android:layout_width="@dimen/width_qty"
                android:layout_height="wrap_content"
                tools:text="KG" />

            <ImageView
                android:id="@+id/iv_check_item"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/check_item_cd"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_check_item"
                tools:visibility="visible" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_param_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/ib_delete_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_item_cd"
                app:srcCompat="@drawable/ic_delete" />

            <ImageView
                android:id="@+id/iv_reorder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/reorder_item_cd"
                app:srcCompat="@drawable/ic_reorder" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="12sp"
        android:background="?colorPrimary"
        android:visibility="gone" />
</LinearLayout>









